--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
                 <div class="container text-uppercase">
                     <a class="navbar-brand" href="#"><img src="images/logo.png" alt="" width="123" height="30"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -86,7 +86,7 @@
 
             <!-- head caption -->
             <div class="container d-flex justify-content-start align-items-center">
-                <div class="caption col-md-7">
+                <div class="caption col-lg-7">
                     <h6>NOW YOU CAN FEEL THE ENERGY</h6>
                     <h1>Start your day with a black Coffee</h1>
                     <a class="primary-btn text-uppercase text-decoration-none" href="#course">buy now</a>
@@ -148,7 +148,7 @@
         </section>
 
         <section id="coffee" class="offset">
-            <div class="second-section">
+            <div class="second-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
                         <div class="section-title text-center">
@@ -280,7 +280,7 @@
         </section>
 
         <section class="offset">
-            <div class="third-section">
+            <div class="third-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
                         <div class="section-title text-center">
@@ -290,11 +290,11 @@
                     </div>
                     <div class="gallery">
                         <div class="row">
-                            <div class="col-12 col-lg-4">
+                            <div class="col-12 col-lg-4 first-half">
                                 <div class="col-12"><img src="images/g1.jpg" alt=""></div>
                                 <div class="col-12"><img src="images/g2.jpg" alt=""></div>
                             </div>
-                            <div class="col-12 col-lg-8">
+                            <div class="col-12 col-lg-8 second-half">
                                 <div class="row">
                                     <div class="col-12"><img src="images/g3.jpg" alt=""></div>
                                     <div class="col-lg-6">
@@ -312,7 +312,7 @@
         </section>
 
         <section id="review" class="offset">
-            <div class="fourth-section">
+            <div class="fourth-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
                         <div class="section-title text-center">
@@ -379,9 +379,90 @@
                 </div>
             </div>
         </section>
+
+        <section id="blog" class="offset">
+            <div class="fifth-section section-gap">
+                <div class="container">
+                    <div class="section-head d-flex justify-content-center">
+                        <div class="section-title text-center">
+                            <h1>What kind of Coffee we serve for you</h1>
+                            <p>Who are in extremely love with eco friendly system.</p>
+                        </div>
+                    </div>
+                    <div class="row blogs">
+                        <div class="col-12 col-md-6">
+                            <img src="images/b1.jpg" alt="" class="img-fluid">
+                            <div>
+                                <a class="blog-btn text-capitalize" href="#">travel</a>
+                                <a class="blog-btn text-capitalize" href="#">life
+                                    style</a>
+                            </div>
+                            <h4>Portable latest Fashion for everyone</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore.</p>
+                            <p class="date">31st January, 2018</p>
+                        </div>
+                        <div class="col-12 col-md-6">
+                            <img src="images/b2.jpg" alt="" class="img-fluid">
+                            <div>
+                                <a class="blog-btn text-capitalize" href="#">travel</a>
+                                <a class="blog-btn text-capitalize" href="#">life
+                                    style</a>
+                            </div>
+                            <h4>Portable latest Fashion for everyone</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                incididunt ut labore et dolore.
+                            </p>
+                            <p class="date">31st January, 2018</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- main section end -->
 
+    <!-- footer section start -->
+    <footer>
+        <section class="footer section-gap">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-lg-5">
+                        <h6 class="text-capitalize">about us</h6>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                            labore dolore magna aliqua.</p>
+                        <p class="copyright">Copyright &copy;2021 All rights reserved | This template is designed with
+                            <i class="far fa-heart"></i> by <span style="color: #b68834;">Colorlib</span>
+                        </p>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-5 newsletter">
+                        <h6 class="text-capitalize">newsletter</h6>
+                        <p>Stay updated with our latest</p>
+                        <div class="form-inline">
+                            <div class="input-group">
+                                <input type="email" class="form-control" placeholder="Enter your email">
+                                <span class="input-group-btn">
+                                    <button class="btn" type="submit"><i class="fas fa-arrow-right"></i></button>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-2 text-center text-lg-start">
+                        <h6 class="text-capitalize">follow us</h6>
+                        <p>let us be social</p>
+                        <div
+                            class="social-icons d-flex align-items-center justify-content-center justify-content-lg-start">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-dribbble"></i></a>
+                            <a href="#"><i class="fab fa-behance"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
+    <!-- footer section end -->
 
 
 
