added scroll top button

--- a/index.html
+++ b/index.html
@@ -464,7 +464,9 @@
     </footer>
     <!-- footer section end -->
 
-
+    <div class="scrolltop float-right">
+        <i class="fas fa-arrow-up" id="myBtn"></i>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js">
     </script>
