--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
     </head>
     <!-- header section end -->
 
-    <!-- main section star -->
+    <!-- main section start -->
     <main>
+        <!-- about section start -->
         <section id="about" class="offset">
             <div class="first-section">
                 <div class="container">
@@ -146,7 +147,9 @@
                 </div>
             </div>
         </section>
+        <!-- about section end -->
 
+        <!-- coffee section start -->
         <section id="coffee" class="offset">
             <div class="second-section section-gap">
                 <div class="container">
@@ -278,7 +281,9 @@
                 </div>
             </div>
         </section>
+        <!-- coffee section end -->
 
+        <!-- service section start -->
         <section class="offset">
             <div class="third-section section-gap">
                 <div class="container">
@@ -310,7 +315,9 @@
                 </div>
             </div>
         </section>
+        <!-- service section end -->
 
+        <!-- review section start -->
         <section id="review" class="offset">
             <div class="fourth-section section-gap">
                 <div class="container">
@@ -379,7 +386,9 @@
                 </div>
             </div>
         </section>
+        <!-- review section end -->
 
+        <!-- blogs section start -->
         <section id="blog" class="offset">
             <div class="fifth-section section-gap">
                 <div class="container">
@@ -419,6 +428,7 @@
                 </div>
             </div>
         </section>
+        <!-- blogs section end -->
     </main>
     <!-- main section end -->
 
@@ -431,8 +441,9 @@
                         <h6 class="text-capitalize">about us</h6>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
                             labore dolore magna aliqua.</p>
-                        <p class="copyright">Copyright &copy;2021 All rights reserved | This template is designed with
-                            <i class="far fa-heart"></i> by <span style="color: #b68834;">Colorlib</span>
+                        <p class="copyright">Copyright &copy;2021 All rights reserved | This template is cloned from
+                            <span style="color: #b68834;">Colorlib</span> by <span style="color: #b68834;">Tajbiul
+                                Hossain</span>
                         </p>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-5 newsletter">
