updated navbar scrolling beahvior

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/fixed.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="#navigation" data-bs-offset="10">
+<body data-bs-spy="scroll" data-bs-target="#navigation" data-bs-offset="40">
 
     <!-- header section start -->
 
@@ -99,15 +99,15 @@
     <!-- main section start -->
     <main>
         <!-- about section start -->
-        <section id="about" class="offset">
-            <div class="first-section">
+        <section id="about">
+            <div class="first-section section-gap">
                 <div class="container">
                     <div class="row">
                         <div class="col-12 col-lg-6">
                             <div class="first-section-left">
                                 <div class="dark d-flex justify-content-center align-items-center">
                                     <a type="button" class="video-btn" data-bs-toggle="modal" data-bs-target="#myModal"
-                                        data-src="https://www.youtube.com/embed/ARA0AxrnHdM"><img class="img-fluid"
+                                        data-src="https://www.youtube.com/embed/An6LvWQuj_8"><img class="img-fluid"
                                             src="images/play.png" alt="play button">
                                     </a>
                                     <!-- Modal -->
@@ -121,8 +121,7 @@
                                                     </button>
                                                     <iframe id="video" class="embed-responsive-item" width="100%"
                                                         height="100%" src="" frameborder="0" allowscriptaccess="always"
-                                                        allow="accelerometer; autoplay;
-                                                        clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                                                         allowfullscreen></iframe>
                                                 </div>
                                             </div>
@@ -150,7 +149,7 @@
         <!-- about section end -->
 
         <!-- coffee section start -->
-        <section id="coffee" class="offset">
+        <section id="coffee">
             <div class="second-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
@@ -284,7 +283,7 @@
         <!-- coffee section end -->
 
         <!-- service section start -->
-        <section class="offset">
+        <section>
             <div class="third-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
@@ -318,7 +317,7 @@
         <!-- service section end -->
 
         <!-- review section start -->
-        <section id="review" class="offset">
+        <section id="review">
             <div class="fourth-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
@@ -389,7 +388,7 @@
         <!-- review section end -->
 
         <!-- blogs section start -->
-        <section id="blog" class="offset">
+        <section id="blog">
             <div class="fifth-section section-gap">
                 <div class="container">
                     <div class="section-head d-flex justify-content-center">
